--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,32 @@
   color: #61dafb;
 }
 
+.App-start h1 {
+  font-size: 10vw;
+}
+
+.App-start p {
+  font-size: 3vw;
+}
+
+.btn {
+  background-color: #b8b3b3;
+
+  border: none;
+  border-radius: 4vw;
+  font-size: 1.5vw;
+  outline-style: none;
+  padding: 1vw 2vw;
+  text-transform: uppercase;
+  margin: 2vw;
+}
+.btn:hover {
+  border: 0.2vw solid #b8b3b3;
+  background-color: #282c34;
+  color: #b8b3b3;
+  padding: 0.8vw 1.8vw;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
