--- a/src/App.css
+++ b/src/App.css
@@ -38,13 +38,13 @@
 
 .btn {
   background-color: #b8b3b3;
-
   border: none;
   border-radius: 4vw;
   font-size: 1.5vw;
   outline-style: none;
   padding: 1vw 2vw;
   text-transform: uppercase;
+  font-weight: bolder;
   margin: 2vw;
 }
 .btn:hover {
